--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>web component</title>
+    <script src="LogWord.js"></script>
   </head>
   <body>
     hello world
+    <log-word></-word>
   </body>
 </html>
