--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>web component</title>
     <script src="./main.js" type="module"></script>
+    <style>
+      html,
+      body {
+        background-color: black;
+      }
+      * {
+        color: white;
+      }
+    </style>
   </head>
   <body>
     hello world
