check shadow dom style scope

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   </head>
   <body>
     <app-title></app-title>
-    hello world
+    <shadow-title></shadow-title>
+    <h1>hello world</h1>
     <log-word>hello world</log-word>
   </body>
 </html>
