--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <body>
     <app-title></app-title>
     <shadow-title></shadow-title>
+    <custom-title>hoge</custom-title>
     <h1>hello world</h1>
     <log-word>hello world</log-word>
   </body>
