--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
   <body>
     <app-title></app-title>
     <shadow-title></shadow-title>
-    <custom-title>hoge</custom-title>
+    <custom-title>sample</custom-title>
+    <custom-title></custom-title>
+
     <h1>hello world</h1>
+
     <log-word>hello world</log-word>
   </body>
 </html>
