--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
     <app-title></app-title>
     <shadow-title></shadow-title>
     <custom-title>sample</custom-title>
-    <custom-title></custom-title>
 
     <h1>hello world</h1>
 
     <log-word>hello world</log-word>
+    <custom-button size="large">click me</custom-button>
+    <custom-button size="medium">click me</custom-button>
+    <custom-button size="small">click me</custom-button>
   </body>
 </html>
