--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
     <custom-button size="large">click me</custom-button>
     <custom-button size="medium">click me</custom-button>
     <custom-button size="small">click me</custom-button>
+    <custom-button>click me</custom-button>
   </body>
 </html>
